WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
255207
movementX and movementY are missing from pointerMove events
https://bugs.webkit.org/show_bug.cgi?id=255207
Summary
movementX and movementY are missing from pointerMove events
Gregg Tavares
Reported
2023-04-09 15:16:55 PDT
Created
attachment 465823
[details]
repo for missing movementX, movementY on PointerEvent According to MDN, PointerEvent is supposed to have a `movementX` and `movementY` field. This appear in Safari on Mac but not in Safari on iOS For a quick live test see:
https://jsgist.org/?src=64c32271a3e7ac51918146b111a2cfd9
Otherwise, there's an attached repo
Attachments
repo for missing movementX, movementY on PointerEvent
(608 bytes, text/html)
2023-04-09 15:16 PDT
,
Gregg Tavares
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-04-16 15:17:14 PDT
<
rdar://problem/108112600
>
EWS
Comment 2
2023-05-08 15:10:41 PDT
Committed
263829@main
(fa2caa624d63): <
https://commits.webkit.org/263829@main
> Reviewed commits have been landed. Closing PR #13471 and removing active labels.
Abrar Rahman Protyasha
Comment 3
2023-08-09 18:26:09 PDT
***
Bug 248119
has been marked as a duplicate of this bug. ***
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug